# depc

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
dep0/: CMakeLists.txt
dep0/00_core_lib/: CMakeLists.txt
dep0/00_core_lib/include/dep0/: mmap.hpp  source.hpp  unique_ref.hpp
dep0/00_core_lib/src/: error.cpp  unique_ref.cpp
dep0/00_core_lib/test/: CMakeLists.txt  dep0_core_tests.cpp
dep0/01_ast_lib/src/: concepts.cpp
dep0/02_parser_lib/: CMakeLists.txt
dep0/02_parser_lib/test/: CMakeLists.txt  dep0_parser_tests.cpp
dep0/03_typecheck_lib/: CMakeLists.txt
dep0/03_typecheck_lib/test/: dep0_typecheck_tests.cpp
dep0/04_llvmgen_lib/: CMakeLists.txt
dep0/04_llvmgen_lib/test/: dep0_llvmgen_tests.cpp
dep0/antlr_lib/: CMakeLists.txt
dep0/app/dep0/: CMakeLists.txt  failure.cpp  failure.hpp  job.cpp  job.hpp  main.cpp  pipeline.cpp  pipeline.hpp
dep0/ast_lib/: CMakeLists.txt
dep0/ast_lib/src/: builder.cpp  tree.cpp
dep0/core_lib/: CMakeLists.txt
dep0/core_lib/include/dep0/: error.hpp  source.hpp  unique_ref.hpp
dep0/core_lib/src/: error.cpp  mmap.cpp  source.cpp
dep0/lib/00_antlr/: CMakeLists.txt
dep0/lib/00_core/: CMakeLists.txt
dep0/lib/00_core/src/: cxx23.cpp  destructive_self_assign.cpp  digit_separator.cpp  error.cpp  fmap.cpp  match.cpp  maybe_const_ref.cpp  mmap.cpp  scope_map.cpp  source.cpp  temp_file.cpp  tracing.cpp  unique_ref.cpp  vector_splice.cpp
dep0/lib/00_core/test/: CMakeLists.txt  dep0_core_error_tests.cpp  dep0_core_match_tests.cpp  dep0_core_scope_map_tests.cpp  dep0_core_tests.cpp  dep0_core_vector_splice_tests.cpp
dep0/lib/01_ast/: CMakeLists.txt
dep0/lib/01_ast/src/: alpha_equivalence.cpp  ast.cpp  attribute.cpp  beta_delta_reduction.cpp  beta_reduction.cpp  concepts.cpp  contains_var.cpp  delta_reduction.cpp  find_member_field.cpp  get_if_array.cpp  hash_code.cpp  max_index.cpp  mutable.cpp  no_properties_builder.cpp  occurs_in.cpp  place_expression.cpp  pretty_print.cpp  qty.cpp  rename.cpp  replace.cpp  sign.cpp  size.cpp  substitute.cpp  traverse.cpp  unwrap_because.cpp  views.cpp  width.cpp
dep0/lib/01_ast/test/: CMakeLists.txt  ast_tests_fixture.cpp  ast_tests_fixture.hpp  dep0_alpha_equivalence_tests.cpp  dep0_beta_delta_reduction_tests.cpp  dep0_contains_var_tests.cpp  dep0_delta_reduction_tests.cpp  dep0_hash_code_tests.cpp  dep0_occurs_in_tests.cpp  dep0_substitute_tests.cpp
dep0/lib/02_parser/: CMakeLists.txt
dep0/lib/02_parser/src/: ast.cpp  parse.cpp  parse_cpp_int.cpp
dep0/lib/02_parser/test/: CMakeLists.txt  dep0_parser_properties_tests.cpp  dep0_parser_tests.cpp  dep0_parser_tests_0000_basics.cpp  dep0_parser_tests_0001_integral_primitives.cpp  dep0_parser_tests_0002_user_defined_integrals.cpp  dep0_parser_tests_0003_function_arguments.cpp  dep0_parser_tests_0004_plus_expr.cpp  dep0_parser_tests_0005_pi_types.cpp  dep0_parser_tests_0006_kinds.cpp  dep0_parser_tests_0007_arrays.cpp  dep0_parser_tests_0008_boolean_expr.cpp  dep0_parser_tests_0009_func_decl.cpp  dep0_parser_tests_0010_axioms.cpp  dep0_parser_tests_0011_quantities.cpp  dep0_parser_tests_0012_auto_expr.cpp  dep0_parser_tests_0013_cstr.cpp  dep0_parser_tests_0014_extern_decl.cpp  dep0_parser_tests_0015_because.cpp  dep0_parser_tests_0016_impossible.cpp  dep0_parser_tests_0016_prelude.cpp  dep0_parser_tests_0017_minus_expr.cpp  dep0_parser_tests_0018_mult_expr.cpp  dep0_parser_tests_0019_div_expr.cpp  dep0_parser_tests_0020_builtins.cpp  dep0_parser_tests_0021_tuples.cpp  dep0_parser_tests_0022_structs.cpp  dep0_parser_tests_0023_references.cpp  parser_tests_fixture.cpp  parser_tests_fixture.hpp
dep0/lib/03_typecheck/: CMakeLists.txt
dep0/lib/03_typecheck/libtt/: CMakeLists.txt
dep0/lib/03_typecheck/src/: alpha_equivalence.cpp  ast.cpp  ast_properties.cpp  beta_delta_equivalence.cpp  beta_delta_reduction.cpp  beta_equivalence.cpp  beta_reduction.cpp  builtin_call.cpp  c_types.cpp  check.cpp  complete_type.cpp  context.cpp  context_ref.cpp  cpp_int_add.cpp  cpp_int_div.cpp  cpp_int_limits.cpp  cpp_int_mult.cpp  cpp_int_sub.cpp  delta_reduction.cpp  delta_unfold.cpp  derivation.cpp  derivation_rules.cpp  drop_unreachable_stmts.cpp  environment.cpp  environment_ref.cpp  error.cpp  has_side_effects.cpp  is_impossible.cpp  is_mutable.cpp  is_terminator.cpp  list_initialization.cpp  max_scope.cpp  place_expression.cpp  prelude.cpp  proof_search.cpp  proof_state.cpp  rename.cpp  replace.cpp  returns_from_all_branches.cpp  rewrite.cpp  (+5 more)
dep0/lib/03_typecheck/test/: CMakeLists.txt  dep0_typecheck_error_msg_tests.cpp  dep0_typecheck_tests.cpp  dep0_typecheck_tests_0000_basics.cpp  dep0_typecheck_tests_0001_integral_primitives.cpp  dep0_typecheck_tests_0002_user_defined_integrals.cpp  dep0_typecheck_tests_0003_function_arguments.cpp  dep0_typecheck_tests_0004_plus_expr.cpp  dep0_typecheck_tests_0005_pi_types.cpp  dep0_typecheck_tests_0006_kinds.cpp  dep0_typecheck_tests_0007_arrays.cpp  dep0_typecheck_tests_0008_boolean_expr.cpp  dep0_typecheck_tests_0009_func_decl.cpp  dep0_typecheck_tests_0010_axioms.cpp  dep0_typecheck_tests_0011_quantities.cpp  dep0_typecheck_tests_0012_auto_expr.cpp  dep0_typecheck_tests_0013_cstr.cpp  dep0_typecheck_tests_0014_extern_decl.cpp  (+13 more)
dep0/lib/04_transform/: CMakeLists.txt
dep0/lib/05_llvmgen/: CMakeLists.txt
dep0/lib/06_compile/: CMakeLists.txt
dep0/lib/06_linker/: CMakeLists.txt
dep0/lib/07_link/: CMakeLists.txt
dep0/lib/07_linker/: CMakeLists.txt
dep0/lib/99_testing/: CMakeLists.txt
dep0/llvmgen_lib/src/: gen.cpp
dep0/llvmgen_lib/test/: CMakeLists.txt
dep0/parser_lib/src/: parse.cpp  parse_tree.cpp
dep0/parser_lib/test/: CMakeLists.txt  dep0_parser_tests.cpp
dep0/typecheck_lib/test/: CMakeLists.txt  dep0_typecheck_tests.cpp
docs/: 004_coding_style.depc  00_intro.md  01_intro.md  01_type_theory.md  02_code_organisation.md  03_dep0.md  04_coding_style.md  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  README.md  code_organisation.dox  coding_style.cpp  coding_style.dox  dep0_design.dox  depc.css  dependent_types_intro.dox  motivation.dox  suggested_reading.dox  type_theory.dox
(+978 files in other folders)
